--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    //"test": "node test.js",
-	//"lint": "./node_modules/.bin/eslint **/*.js"
+    "test": "node test.js",
+	"lint": "./node_modules/.bin/eslint **/*.js"
   },
   "repository": {
     "type": "git",
@@ -19,7 +19,6 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
-    //"technolibs": "1.1.0",
     "json-schema-mock": "0.0.8",
     "techno-gendoc": "0.4.1"
   },
